# Sol_LeWitt

./: .gcloudignore  .gitignore  README.md  apphosting.yaml
backend/: .env.example  .gcloudignore  Dockerfile  Dockerfile.pptx-renderer  README.md  cloudbuild.yaml  design_assets_documentation.md  development_design_specs.json  main.py  pitch_deck_package.json  policy.json  presentation_summary.json  pyproject.toml  requirements.txt  saas_dashboard_ui_documentation.md  server.py
backend/design_assets/: design_guidelines.json  implementation_summary.md
backend/docs/: README.md  api_spec.md  architecture.md  database_schema.md  dev_ops.md  langgraph_workflow.md  vercel.md
backend/docs/api/: endpoints.md
backend/docs/architecture/: 01_overview.md  02_workflow_engine.md  03_streaming_protocol.md
backend/docs/data/: database_schema.md  visualizer_json_fields_inventory.md
backend/docs/guides/: deployment_and_ops.md  setup_and_development.md
backend/langgraph/: pyproject.toml  verify_backend.py
backend/langgraph/src/: workflow.py
backend/langgraph/tests/: e2e_test_image_gen.py  test_gemini_parsing.py  test_jina_client.py  test_settings.py  test_template.py  verify_logic_mock.py
backend/lecture_package/: research_summary.json  slide_structure.json
backend/package_content/: presentation_structure.json  research_summary.json
backend/scripts/: backfill_thread_ownership.py  check_sdk.py  cleanup_db.py  debug_gemini.py  debug_gemini_2.py  init_db.py  restart_services.sh  scan_regions.py  setup_db.py  verify_db.py  verify_gcp_connectivity.py  verify_gemini_connection.py  verify_gemini_image.py  verify_quota.py  verify_user_snippet.py
backend/src/: main.py
backend/src/app/: app.py
backend/src/tools/: __init__.py  crawl.py  decorators.py
backend/test/: conftest.py  repro_chat.py  repro_langgraph_issue.py  repro_vertex_400.py  test_auth_scoping_helpers.py  test_category_flow_contracts.py  test_coordinator_node.py  test_data_analyst_node.py  test_history_serialization.py  test_image_generator_reference_parts.py  test_inpaint_api_helpers.py  test_llm_genai.py  test_llm_safety.py  test_llm_vertexai.py  test_orchestration_contracts.py  test_orchestration_nodes.py  test_planner_prompt_selection.py  test_planner_research_guard.py  test_planner_research_repair_flow.py  test_pptx_context_builder.py  test_pptx_parser.py  test_researcher_manager_state.py  test_researcher_task_decomposition.py  test_standard_streaming.py  test_stream_filter_helpers.py  test_stream_manual.py  test_thread_snapshot_serialization.py  test_upload_validation.py  test_visualizer_node_failure.py  test_visualizer_prompt_selection.py  test_worker_mode_contracts.py  test_worker_mode_helpers.py  test_writer_prompt_selection.py  verify_ndjson_stream.py  verify_researcher_events.py  verify_researcher_grounding.py  verify_researcher_serialization.py  verify_stream_format.py  verify_structured_stream.py
backend/test/e2e/: test_full_flow_real.py  test_langgraph_comprehensive.py
backend/test/integration/: test_workflow_graph.py  verify_stream_protocol.py
backend/test/unit/: test_coordinator.py  test_data_analyst.py  test_langgraph_flow_mock.py  (+4 more)
backend/tests/: conftest.py  repro_chat.py  repro_vertex_400.py  repro_with_server.py  test_protocol_coverage.py  verify_stream_format.py
(+280 files in other folders)
