[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sol-lewitt"
version = "0.1.0"
description = "Sol LeWitt project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=1.2.7",
    "langchain-experimental>=0.4.1",
    "langgraph>=1.0.7",
    "readabilipy>=0.3.0",
    "python-dotenv>=1.2.1",
    "markdownify>=1.2.2",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "python-multipart>=0.0.22",
    "sse-starlette>=1.6.5,<2.0.0",
    "langchain-google-vertexai>=3.2.2",
    "langchain-google-genai>=4.2.0",
    "google-genai>=1.62.0",
    "langgraph-checkpoint-postgres>=3.0.4",
    "psycopg[binary,pool]>=3.3.2",
    "google-cloud-storage>=3.8.0",
    "firebase-admin>=6.5.0",
    "pydantic-settings>=2.12.0",
    "pdf2image>=1.17.0",
    "Pillow>=12.1.0",
    "langserve[all]>=0.3.3",
    "psycopg2-binary>=2.9.11",
]


[project.optional-dependencies]
dev = [
    "black>=26.1.0",
]
test = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0"
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/build/
'''
